Update 177. Nth Highest Salary.md

--- a/177. Nth Highest Salary.md
+++ b/177. Nth Highest Salary.md
@@ -1,65 +1,109 @@
 # Finding the Nth Highest Salary in SQL
 
 This document compares two different SQL approaches for finding the nth highest salary from a table.
-https://leetcode.com/problems/nth-highest-salary/?envType=problem-list-v2&envId=database
 
-## Approach 1: Using OFFSET
+## Time Complexity Analysis
+
+### OFFSET Approach
+- **Overall Complexity**: O(n)
+- **Breakdown**:
+  - Table scan: O(n)
+  - DISTINCT operation: O(n)
+  - OFFSET operation: O(N) where N is the offset value
+- **Why it matters**:
+  - Linear scanning makes it efficient for single-pass operations
+  - Performance primarily depends on table size
+  - Memory usage is minimal as it only needs to track distinct values
+
+### DENSE_RANK Approach
+- **Overall Complexity**: O(m log m) where m is the number of distinct salaries
+- **Breakdown**:
+  - Window function sorting: O(m log m)
+  - Rank computation: O(m)
+  - Final filtering: O(1)
+- **Why it matters**:
+  - Sorting overhead for distinct values can be significant
+  - More expensive when there are many unique salaries
+  - Additional memory needed for sorting and rank computation
+
+
+### Performance Impact Examples
+- For a table with many duplicate salaries:
+  - OFFSET approach: Linear scan regardless of duplicates
+  - DENSE_RANK approach: Better performance as m (distinct values) << n (total rows)
+- For a table with mostly unique salaries:
+  - OFFSET approach: Maintains linear performance
+  - DENSE_RANK approach: Performance closer to O(n log n) as m approaches n
+
+### Approach 1: Using OFFSET
 
 ```sql
-SELECT DISTINCT Salary
-FROM Employee
-ORDER BY Salary DESC
-LIMIT 1 OFFSET N-1;
+CREATE OR REPLACE FUNCTION NthHighestSalary(N INT) RETURNS TABLE (Salary INT) AS $$
+BEGIN
+    -- Input validation
+    IF n < 1 THEN
+        RETURN NULL;  -- Return null if n is invalid
+    END IF;
+
+    RETURN QUERY (
+        SELECT DISTINCT e.salary
+        FROM Employee e
+        ORDER BY e.salary DESC
+        LIMIT 1 OFFSET n - 1
+    );
+END;
+$$ LANGUAGE plpgsql;
 ```
 
-### How it works
-1. `DISTINCT` removes duplicate salary values
-2. `ORDER BY Salary DESC` sorts salaries in descending order
-3. `LIMIT 1 OFFSET N-1` skips N-1 rows and returns the next row
-
-### Time Complexity
-- O(n log n) due to sorting operation
-- Space Complexity: O(1) as it only needs to store one value
-
-### Advantages
-- Simple and intuitive implementation
-- Works well for small to medium-sized datasets
-- Easy to understand and maintain
-
-### Disadvantages
-- Performance may degrade with large datasets due to sorting
-- OFFSET operation needs to scan through N-1 rows
-
-## Approach 2: Using Subquery Count
+### Approach 2: Using DENSE_RANK
 
 ```sql
-SELECT Salary
-FROM Employee e1
-WHERE N-1 = (
-    SELECT COUNT(DISTINCT Salary)
-    FROM Employee e2
-    WHERE e2.Salary > e1.Salary
-);
+CREATE OR REPLACE FUNCTION NthHighestSalary(N INT) RETURNS TABLE (Salary INT) AS $$
+BEGIN
+    RETURN QUERY (
+        SELECT a.salary
+        FROM (
+            SELECT e.salary, 
+                   DENSE_RANK() OVER (ORDER BY e.salary DESC) r 
+            FROM Employee e
+        ) a
+        WHERE a.r = n
+        LIMIT 1
+    );
+END;
+$$ LANGUAGE plpgsql;
 ```
 
-### How it works
-1. For each salary in the outer query
-2. Counts how many distinct salaries are greater than it
-3. Returns the salary where exactly N-1 salaries are greater
+### Important Considerations
 
-### Time Complexity
-- O(n²) in worst case due to nested loop
-- Space Complexity: O(1)
+1. **Function Syntax**
+   - Uses PostgreSQL's specific `RETURNS TABLE` syntax
+   - Requires `LANGUAGE plpgsql` specification
+   - Uses `$$` for function body delimiter
+   - Uses `RETURN QUERY` for returning result sets
 
-### Advantages
-- No explicit sorting required
-- Can be more efficient for finding specific positions (like 2nd or 3rd highest)
-- Works well with indexes on the Salary column
+2. **OFFSET vs DENSE_RANK Approach**
+   - OFFSET approach:
+     - Simpler to understand
+     - Requires DISTINCT to handle duplicates
+     - May be slower for large offsets
+   - DENSE_RANK approach:
+     - Handles duplicates naturally
+     - More efficient for larger N values
+     - Consistent with SQL standard window functions
 
-### Disadvantages
-- More complex to understand
-- May perform poorly on large datasets due to nested query
-- Multiple table scans required
+3. **NULL Handling**
+   - Input validation important for OFFSET approach
+   - DENSE_RANK approach naturally returns empty result for invalid N
+   - Both return empty result set when no matching salary exists
+
+4. **Performance Considerations**
+   - DENSE_RANK:
+     - Single table scan
+     - Memory overhead for window function
+   - OFFSET:
+     - Multiple scans for DISTINCT
+     - May need to scan N rows for large offsets
 
 ## Recommendation
 
