Update 177. Nth Highest Salary.md

--- a/177. Nth Highest Salary.md
+++ b/177. Nth Highest Salary.md
@@ -16,24 +16,23 @@ This document compares two different SQL approaches for finding the nth highest 
   - Memory usage is minimal as it only needs to track distinct values
 
 ### DENSE_RANK Approach
-- **Overall Complexity**: O(m log m) where m is the number of distinct salaries
+- **Overall Complexity**: O(n log n)
 - **Breakdown**:
-  - Window function sorting: O(m log m)
-  - Rank computation: O(m)
+  - Window function sorting: O(n log n)
+  - Rank computation: O(n)
   - Final filtering: O(1)
 - **Why it matters**:
-  - Sorting overhead for distinct values can be significant
-  - More expensive when there are many unique salaries
+  - Sorting overhead for all rows can be significant
+  - Performance depends on total number of rows, not distinct values
   - Additional memory needed for sorting and rank computation
-
 
 ### Performance Impact Examples
 - For a table with many duplicate salaries:
-  - OFFSET approach: Linear scan regardless of duplicates
-  - DENSE_RANK approach: Better performance as m (distinct values) << n (total rows)
+  - OFFSET approach: Linear scan O(n)
+  - DENSE_RANK approach: Still requires O(n log n) as it must sort all rows
 - For a table with mostly unique salaries:
-  - OFFSET approach: Maintains linear performance
-  - DENSE_RANK approach: Performance closer to O(n log n) as m approaches n
+  - OFFSET approach: Maintains linear O(n) performance
+  - DENSE_RANK approach: O(n log n) due to sorting all rows
 
 ### Approach 1: Using OFFSET
 
@@ -85,12 +84,14 @@ $$ LANGUAGE plpgsql;
 2. **OFFSET vs DENSE_RANK Approach**
    - OFFSET approach:
      - Simpler to understand
-     - Requires DISTINCT to handle duplicates
-     - May be slower for large offsets
+     - Linear time complexity O(n)
+     - Better for large datasets
+     - Performance degrades with larger N values
    - DENSE_RANK approach:
-     - Handles duplicates naturally
-     - More efficient for larger N values
-     - Consistent with SQL standard window functions
+     - More complex implementation
+     - O(n log n) time complexity
+     - Consistent performance regardless of N
+     - Higher memory usage due to sorting
 
 3. **NULL Handling**
    - Input validation important for OFFSET approach
@@ -98,24 +99,36 @@ $$ LANGUAGE plpgsql;
    - Both return empty result set when no matching salary exists
 
 4. **Performance Considerations**
-   - DENSE_RANK:
-     - Single table scan
-     - Memory overhead for window function
    - OFFSET:
-     - Multiple scans for DISTINCT
-     - May need to scan N rows for large offsets
+     - Single pass through data O(n)
+     - Memory efficient as no sorting required
+     - Performance depends on value of N
+     - Better for large datasets when N is small
+   - DENSE_RANK:
+     - Requires sorting all rows O(n log n)
+     - Higher memory overhead for sorting
+     - Consistent performance for any N
+     - Less efficient for large datasets
 
 ## Recommendation
 
 - Use Approach 1 (OFFSET) for:
-  - Small to medium-sized datasets
-  - When code readability is a priority
-  - When the data is already sorted or indexed
+  - When optimal time complexity O(n) is crucial
+  - Large datasets with many rows
+  - When memory usage needs to be minimized
+  - When N is relatively small compared to dataset size
 
-- Use Approach 2 (Subquery) for:
-  - When you have good indexes on the Salary column
-  - When you need to find salaries close to the top (small N)
-  - When avoiding sorting operations is beneficial
+- Use Approach 2 (DENSE_RANK) for:
+  - When consistent performance regardless of N is needed
+  - When you need to handle duplicate values elegantly
+  - When you're already using window functions in your query
+  - When the O(n log n) overhead is acceptable for your use case
+
+The choice between these approaches often depends on:
+1. Dataset size and characteristics
+2. Value of N relative to dataset size
+3. Frequency of function calls
+4. Whether consistent performance or optimal worst-case performance is more important
 
 ## Note on NULL Values
 Both approaches need to consider NULL handling in real-world applications. It's recommended to add NULL checks or use COALESCE when dealing with salary data that might contain NULL values. 
